# pooli-monitoring

./: .gitignore  README.md  pooli_be_todo.md  pyproject.toml  todo.md
artifacts/: train_csv_settings.yaml
artifacts/csv_train_smoke/: metadata.json  scaler.joblib
artifacts/current/: metadata.json  model.joblib  scaler.joblib
artifacts/synthetic_dataset/: metadata.json  synthetic_events.csv
config/: baseline_rules.yaml  metrics_contract.example.yaml  metrics_contract.traffic_db.yaml  metrics_contract.traffic_db_query.yaml  metrics_contract.was_db.yaml  metrics_contract.yaml  settings.example.yaml  settings.traffic_db.yaml  settings.yaml
deploy/monitoring/: .env.example  alert.rules.yml  alertmanager.yml  docker-compose.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
deploy/monitoring/grafana/dashboards/: db-query-dashboard.json  traffic-generator-dashboard.json  traffic-log-dashboard.json
deploy/monitoring/grafana/dashboards/pooli/: api-endpoint-dashboard.json  db-query-dashboard.json  pooli-infrastructure-overview-dashboard.json
deploy/systemd/: pooli-baseline-detect.service  pooli-baseline-detect.timer  pooli-rca.service  pooli-rca.timer  pooli-traffic-detect.service  pooli-traffic-detect.timer
src/pooli_aiops/: __init__.py  __main__.py  alerting.py  baseline.py  cli.py  config.py  contracts.py  detector.py  features.py  modeling.py  prometheus_client.py  rca_engine.py  synthetic_data.py  trainer.py
src/pooli_aiops_monitoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+11 files in other folders)
